--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h1{font-size: 3vw; padding-top: 50px;}
 <h2>The Elemental Quest</h2>
 <p>Demons from the Shadow Realm are once again attacking the land of Krull. They have stolen the 4 elements, Earth, Air, Fire and Water and returned to the Shadow Realm. Without these elements Krull will descend into hell. Your quest is to take the portal to the Shadow Realm, find the elements and return to Krull. Light is a rare thing within the Shadow Realm and you will need to find all four elements before your torch dies and all hope is lost.</p>
 <a id='P'>Begin Quest</a>
-<p><b>Instructions:</b><br>WASD + Click and Drag, spacebar to jump, F5 to restart</p>
+<p><b>Instructions:</b><br>WASD &amp; Mouse, F5 to restart</p>
 </div>
 </div>
 <div id="l">Loading</div>
