fixes and stuff

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ h1{font-size: 3vw; padding-top: 50px;}
     uniform mat4 uMVMatrix;
     uniform vec3 cameraPos;
     uniform vec3 nearestLight;
+    uniform vec3 ecolor;
     
 
     void main(void) {
@@ -71,7 +72,7 @@ h1{font-size: 3vw; padding-top: 50px;}
 		
 		{{Textures}}
 		
-		if(mat==100.) tex=vec3(1.,abs(cos(time*0.002))*vec2(.3,.1))*10.;
+		if(mat==100.) tex=mix(ecolor, vec3(1.),abs(cos(time*0.002)))*2.;
 
 		vec3 pos=vCoord-cameraPos+vec3(uMVMatrix[0].z,uMVMatrix[1].z,1.)*-.5;
 		vec3 element=vCoord-nearestLight;
