--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@ h1{font-size: 3vw; padding-top: 50px;}
     uniform vec3 nearestLight;
     uniform vec3 ecolor;
     
+     vec3 moss(vec3 c){
+	vec2 coord=vCoord.xz;
+	 return mix(c,texture2D(texture1,coord*4.).ggg*vec3(0.10000,0.10000,0.00000),clamp(clamp((texture2D(texture2,vCoord.xy*.1).bbb*texture2D(texture2,vCoord.zx*.1).bbb*texture2D(texture2,vCoord.yz*.1).bbb-0.03)/(1.-0.03),0.,1.)*3.,0.,.95));
+ }
 
     void main(void) {
 	if(dist==1.0){
@@ -70,7 +74,15 @@ h1{font-size: 3vw; padding-top: 50px;}
 
 		vec3 tex=vec3(1.);
 		
-		{{Textures}}
+		if(mat==0.0) 
+	if(vNormal.z<-.707 || vNormal.z<-.707) tex=moss(texture2D(texture1,coord*0.3).ggg*texture2D(texture2,coord*0.3).rrr);
+	else tex=moss(mix(mix(texture2D(texture2,coord*0.3).bbb,texture2D(texture1,coord*0.5).bbb,.2)*vec3(0.90000,0.80000,0.70000),texture2D(texture1,coord).ggg,.4)*texture2D(texture1,coord*0.4).rrr);
+else if(mat==1.0) tex=moss(texture2D(texture1,coord*vec2(0.50000,0.05000)).ggg*vec3(0.30000,0.20000,0.10000));
+else if(mat==2.0 || mat==7.0) tex=moss(texture2D(texture1,coord*vec2(0.05000,0.50000)).ggg*vec3(0.30000,0.20000,0.10000))*texture2D(texture1,coord*vec2(0.01000,0.20000)).rrr*2.;
+else if(mat==3.0) tex=vec3(.02);  
+else if(mat==4.0) tex=moss(texture2D(texture1,coord).ggg*texture2D(texture1,coord*vec2(0.25000,0.27000)).rrr*vec3(0.80000,0.20000,0.10000));
+else if(mat==5.0) tex=mix(texture2D(texture2,coord*.5+time*.0001).bbb,texture2D(texture2,coord*.4+time*.0002).bbb,.8)*vec3(0.00000,0.08000,0.10000); 
+else if(mat==6.0) tex=mix(texture2D(texture2,coord*.5+time*.0001).bbb,texture2D(texture2,coord*.4+time*.0002).bbb,.5);  
 		
 		if(mat==100.) tex=mix(ecolor, vec3(1.),abs(cos(time*0.002)))*2.;
 
